# webscreenshotter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  take_screenshot.py  test.py  webscreenshotter.py
webscreenshotter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
