[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.1.1"
authors = [
  { name="0x4f", email="me@0x4f.in" },
]
description = "A Python utility that takes a stitched screenshot of a webpage along with individual ones, at any resolution"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL v3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"