[project]
name = "webscreenshotter"
version = "0.1.3"
authors = [
  { name="0x4f", email="me@0x4f.in" },
]
description = "A Python utility that takes a stitched screenshot of a webpage along with individual ones, at any resolution"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/0x4f53/webscreenshotter"
Issues = "https://github.com/0x4f53/webscreenshotter/issues"